--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
 :root {
   line-height: 1.5;
   font-weight: 400;
@@ -22,10 +24,13 @@
 
 html {
   box-sizing: border-box;
+  font-family: "Noto Sans", sans-serif;
+  font-size: 16px;
 }
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 /* a:hover {
   color: #535bf2;
@@ -34,7 +39,6 @@ a {
 body {
   position: relative;
   background-color: #fff;
-  color: #1a1a1a;
 }
 
 ul {
