Update home component style

--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -69,7 +69,8 @@
 .link {
   background: linear-gradient(to bottom, #ffffffc6 40%, #ffffff44);
   border-radius: 0.5rem;
-  color: #4e7736;
+  // color: #4e7736;
+  color: rgb(50, 22, 6);
   display: inline-block;
   font-size: 1.2rem;
   font-weight: 600;
