Add media queries to html selector

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,18 @@ html {
   font-size: 15px;
 }
 
+@media only screen and (max-width: 1000px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  html {
+    font-size: 13px;
+  }
+}
+
 a {
   text-decoration: none;
   cursor: pointer;
