--- a/src/pages/contact/Contact.module.scss
+++ b/src/pages/contact/Contact.module.scss
@@ -1,112 +1,69 @@
 @import url("https://fonts.googleapis.com/css2?family=Limelight&display=swap");
 
-.contact {
-  width: 100%;
-  min-height: 100vh;
-  height: 30rem;
-
-  display: flex;
-
+.main {
   background-image: url(/src/assets/images/wall.jpg);
-  //   background-image: linear-gradient(to top left, #71955d, #4e7736);
-  //   background-image: url(/src/assets/images/contact.jpg);
   background-position: left;
-  background-size: cover;
-  position: relative;
-  z-index: 0;
-
-  padding: 0 2rem;
 
   &::after {
-    // background-color: #4e773651;
-    // background-color: rgba(0, 0, 0, 0.5);
-    content: "";
-    height: 100%;
-
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: -1;
-  }
-}
-
-.content {
-  position: relative;
-  margin-right: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-
-  @media only screen and (max-width: 1000px) {
-    flex-direction: column;
-    padding: 5rem 0;
-    gap: 0rem;
-    margin-left: auto;
+    opacity: 0.275;
   }
 }
 
 .wrapper {
-  width: 50%;
+  position: relative;
+  align-items: center;
+  display: flex;
+
+  justify-content: center;
+  flex-direction: column;
+
+  margin: 0 auto;
+
+  @media only screen and (max-width: 1000px) {
+    padding: 5rem 0;
+  }
+}
+
+.info {
+  max-width: 40rem;
 
   text-align: center;
 
-  color: rgb(50, 22, 6);
   padding: 3rem 1rem;
-  background: linear-gradient(to bottom, #ffffffc6 66%, #ffffff44);
-
   border-radius: 2rem;
 
-  @media only screen and (max-width: 1000px) {
-    max-width: 40rem;
-    width: 100%;
-    margin: 0 auto;
-  }
-}
-
-.header {
-  width: 50%;
-
-  @media only screen and (max-width: 1000px) {
-    width: 100%;
-  }
-}
-
-.h1 {
-  font-family: "Limelight", sans-serif;
-  letter-spacing: 2px;
-  line-height: 1;
-  font-size: 4.5rem;
-  text-align: center;
-
-  text-transform: uppercase;
-  margin-bottom: 2.5rem;
-}
-
-.p {
-  font-size: 1.1rem;
-  font-weight: 500;
-  letter-spacing: 1px;
-  line-height: 1.7;
-  padding: 0 5.5rem;
-  line-height: 1.75;
-  margin-bottom: 2rem;
-
-  @media only screen and (max-width: 700px) {
-    padding: 0 3rem;
-  }
-}
-
-.img {
-  display: block;
-  height: 100%;
   width: 100%;
-  object-fit: contain;
+
+  & > * {
+    &:not(:last-child) {
+      margin-bottom: 2.5rem;
+    }
+  }
 }
 
-.mail {
-  font-size: 1.5rem;
-  letter-spacing: 4px;
+// .header {
+//   width: 50%;
+
+//   @media only screen and (max-width: 1000px) {
+//     width: 100%;
+//   }
+// }
+
+// .p {
+//   font-size: 1.1rem;
+//   font-weight: 500;
+//   letter-spacing: 1px;
+//   line-height: 1.7;
+//   line-height: 1.75;
+//   margin-bottom: 2rem;
+
+//   @media only screen and (max-width: 700px) {
+//     padding: 0 3rem;
+//   }
+// }
+
+.link {
+  font-size: 1.175rem;
+  font-weight: 600;
   text-decoration: underline;
 }
