Update Places style component

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -53,6 +53,15 @@ ul {
 
   text-align: center;
   text-transform: uppercase;
+  word-break: break-all;
+
+  @media only screen and (max-width: 1000px) {
+    font-size: 4rem;
+  }
+
+  @media only screen and (max-width: 600px) {
+    font-size: 3.5rem;
+  }
 }
 
 .paragraph {
