--- a/src/pages/places/singlePlace/SinglePlace.module.scss
+++ b/src/pages/places/singlePlace/SinglePlace.module.scss
@@ -1,99 +1,150 @@
 .wrapper {
   margin: 0 auto;
-  max-width: 62.5rem;
-
+  margin-bottom: 15rem;
+  max-width: 70rem;
   width: 100%;
-}
 
-.place {
-  background: linear-gradient(to bottom, #fffffff5 25%, #ffffff8e);
+  &:last-child {
+    margin-bottom: 0rem;
+  }
 
-  border-radius: 0.75rem;
-  box-shadow: rgba(255, 255, 255, 0.05) 0px 1px 0px,
-    rgb(190, 190, 190) 0px 0px 8px;
-  color: rgb(50, 22, 6);
-  width: 100%;
+  @media screen and (max-width: 1000px) {
+    margin-bottom: 10rem;
+  }
 }
 
 .card {
+  align-items: flex-end;
+
   display: flex;
-  gap: 3rem;
+  gap: 2.5rem;
   justify-content: center;
-  margin-bottom: 5rem;
-  padding: 2rem;
+
+  text-align: center;
+
+  // padding: 1.5rem;
+  padding: 0 2.5rem;
+  position: relative;
+  color: #fff;
+
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+    align-items: center;
+
+    gap: 3rem;
+  }
 }
 
 .reverse {
   flex-direction: row-reverse;
+
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+  }
 }
 
 .photo {
-  flex: 1;
-  background-color: #fff;
-  border-radius: 0.5rem;
-}
+  border-radius: 50%;
+  border: 3px solid #fff;
 
-.info {
-  flex: 1;
-  padding-top: 1rem;
-  text-align: center;
-}
+  box-shadow: #ffffff2c 0px 4px 16px, rgba(255, 255, 255, 0.198) 0px 8px 32px;
 
-.heading {
-  align-items: center;
-  display: flex;
+  overflow: hidden;
+  position: relative;
 
-  margin-bottom: 1.5rem;
+  &::after {
+    background-color: rgba(0, 0, 0, 0.33);
 
-  &::after,
-  &::before {
-    background-color: rgb(50, 22, 6);
     content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+
+    width: 100%;
+  }
+
+  @media screen and (max-width: 800px) {
+    left: 0 !important;
+  }
+
+  & > img {
     display: block;
-    height: 2px;
-    flex: auto;
+    height: 25.5rem;
+    object-fit: cover;
+
+    width: 25.5rem;
+
+    @media screen and (max-width: 800px) {
+      height: 20rem;
+      width: 20rem;
+    }
+
+    @media screen and (max-width: 600px) {
+      height: 15rem;
+      width: 15em;
+    }
+  }
+}
+
+.content {
+  margin-bottom: 1rem;
+  flex: 1;
+
+  & > * {
+    &:not(:last-child) {
+      margin-bottom: 2rem;
+    }
   }
 }
 
 .h3 {
   font-family: "Limelight", sans-serif;
-  font-size: 1.75rem;
+  font-size: 2.5rem;
   letter-spacing: 2px;
-  margin: 0 1rem;
+  line-height: 1;
 }
 
 .p {
-  margin-bottom: 2rem;
+  font-size: 1rem;
   line-height: 1.7;
+  word-spacing: 1px;
 }
 
 .link {
-  // background-color: #526845;
-  background-color: #487343;
-  border-radius: 0.5rem;
-  color: #fff;
-  display: inline-block;
-  font-size: 1rem;
-  letter-spacing: 2px;
-
   padding: 0.75rem 2.25rem;
-  text-transform: uppercase;
+  font-weight: 600;
 }
 
 .ornament {
-  display: flex;
-  fill: #ffffff;
-  justify-content: center;
-  position: relative;
+  fill: rgba(255, 255, 255, 0.05);
+  position: absolute;
+  top: -2.5rem;
 
-  bottom: -0.125rem;
-  //   left: 50%;
-
-  // fill: #fff;
-  //   transform: translateX(-50%); // rotate(180deg);
   & svg {
     display: block;
     fill: inherit;
-    width: 21.5rem;
+    width: 65rem;
+
+    @media screen and (max-width: 1000px) {
+      width: 55rem;
+    }
+
+    @media screen and (max-width: 800px) {
+      width: 50rem;
+    }
+
+    @media screen and (max-width: 800px) {
+      width: 40rem;
+    }
+
+    @media screen and (max-width: 600px) {
+      width: 30rem;
+    }
   }
 }
