--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -10,7 +10,7 @@
   fill: rgba(255, 255, 255, 0.66);
 
   left: 0;
-  padding: 0.75rem 0 0.5rem 0;
+  padding: 0.5rem 0 0.33rem 0;
   position: absolute;
 
   top: 0;
@@ -28,10 +28,10 @@
   }
 
   &li {
-    font-size: 1rem;
+    font-size: 0.95rem;
     font-weight: 600;
     letter-spacing: 2px;
-    margin: 0 1rem;
+    margin: 0 1.1rem;
     text-transform: capitalize;
   }
 
@@ -51,6 +51,7 @@
 
       width: 100%;
       height: 2px;
+      margin-top: 3px;
       background-color: #5e8e43;
     }
   }
@@ -58,7 +59,7 @@
 
 .curve {
   position: absolute;
-  bottom: -10px;
+  bottom: -8px;
   left: 0;
   width: 100%;
   overflow: hidden;
@@ -68,7 +69,7 @@
     position: relative;
     display: block;
     width: calc(100% + 1.3px);
-    height: 10px;
+    height: 8px;
   }
 
   &.fill {
