Move MapButton component to components folder

--- a/src/pages/map/components/button/MapButton.module.scss
+++ b/src/pages/map/components/button/MapButton.module.scss
@@ -5,4 +5,6 @@
   letter-spacing: 1px;
   padding: 0.875rem 2.5rem;
   width: 100%;
+
+  // background-image: linear-gradient(to top, #92a590, #2ff71d44);
 }
