Add Map Container and Sidbar to Map Page
Add leaflet Map

--- a/src/pages/map/Map.module.scss
+++ b/src/pages/map/Map.module.scss
@@ -3,106 +3,23 @@
   width: 100%;
   height: 30rem;
   min-height: 100vh;
-  display: flex;
+  // display: flex;
 
   background-color: #335330;
-  padding-top: 2.75rem;
+  padding-top: 3rem;
 }
 
 .map {
-  flex: 1;
+  // flex: 1;
+  height: 100%;
+  width: 100%;
   display: block;
   position: relative;
-  // padding: 0 0.25rem 0.25rem 0;
-  // border: 0.33rem solid rgba(255, 255, 255, 0.25);
-  // border-radius: 1rem;
-  // border-top: 0.33rem solid rgba(255, 255, 255, 0.25);
-  // border-bottom: 0.33rem solid rgba(255, 255, 255, 0.25);
-  // overflow: hidden;
 }
 
-#map {
-  display: block;
-  width: 100%;
-  height: 100%;
-  z-index: 50;
-  // border-bottom-left-radius: 1.5rem;
-  // border-bottom-right-radius: 1.5rem;
-
-  // border-radius: 2rem;
-}
-
-// .config {
-//   border-top: 0.33rem solid rgba(255, 255, 255, 0.25);
-//   border-bottom: 0.33rem solid rgba(255, 255, 255, 0.25);
-//   // padding-top: 3.5rem;
-
-//   text-align: center;
-//   flex: 1;
-
-//   // padding: 0.33rem 0;
-//   // border-top: 0.33rem solid rgba(255, 255, 255, 0.25);
-//   // border-top: 0.33rem solid rgba(255, 255, 255, 0.25);
-//   // border-top-left-radius: 1rem;
-//   // border-top-right-radius: 1rem;
-//   overflow: hidden;
-// }
-
-// .feature {
-//   display: flex;
-//   flex-direction: column;
-//   height: 100%;
-
-//   & > * {
-//     &:not(:last-child) {
-//       margin-bottom: 0.25rem;
-//     }
-//   }
-// }
-
-// .config__item {
-//   flex: 0;
-
-//   &:first-child {
-//     flex: 1;
-//     overflow-x: auto;
-//     background-color: rgba(255, 255, 255, 0.25);
-
-//     height: 100%;
-
-//     & .h3 {
-//       position: sticky;
-//       top: 0;
-//       background-color: #335330;
-//       // border-top-left-radius: 1rem;
-//       // border-top-right-radius: 1rem;
-//     }
-
-//     & > .test {
-//     }
-//   }
-// }
-
-// .h3 {
+// #map {
+//   display: block;
 //   width: 100%;
-//   // border-top: 2px solid rgba(255, 255, 255, 0.25);
-//   // border-bottom: 2px solid rgba(255, 255, 255, 0.25);
-//   padding: 0.33rem 0;
-// }
-
-// .hist_map {
-//   display: flex;
-//   padding: 0.5rem;
-// }
-
-// .fragment {
-//   height: 4rem;
-//   width: 4rem;
-//   border: 2px solid #fff;
-//   margin-right: 0.5rem;
-// }
-
-// .h4 {
-//   padding: 0.25rem;
-//   font-size: 1.125rem;
+//   height: 100%;
+//   z-index: 50;
 // }
