--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -117,6 +117,13 @@ ul {
   }
 }
 
+#map {
+  display: block;
+  width: 100%;
+  height: 100%;
+  z-index: 50;
+}
+
 // button {
 //   border-radius: 8px;
 //   border: 1px solid transparent;
