--- a/src/pages/map/components/fragmentMapItem/FragmentMapItem.module.scss
+++ b/src/pages/map/components/fragmentMapItem/FragmentMapItem.module.scss
@@ -1,6 +1,11 @@
 .fragmentMap {
   display: flex;
   padding: 0.5rem;
+  width: 100%;
+  background-color: transparent;
+
+  border: 2px solid #fff;
+  border-radius: 0.25rem;
 }
 
 .photo {
@@ -22,4 +27,5 @@
   padding: 0.25rem;
   letter-spacing: 1px;
   line-height: 1;
+  color: #fff;
 }
