--- a/src/pages/map/components/tileLayerList/TileLayerList.module.scss
+++ b/src/pages/map/components/tileLayerList/TileLayerList.module.scss
@@ -19,10 +19,18 @@
   border-radius: 0.25rem;
   overflow: hidden;
 
+  opacity: 0.66;
+
+  transition: opacity 0.2s;
+
   & > img {
     display: block;
     height: 100%;
     width: 100%;
     object-fit: cover;
   }
+}
+
+.active {
+  opacity: 1;
 }
