--- a/src/pages/map/components/sibebar/Canvas.module.scss
+++ b/src/pages/map/components/sibebar/Canvas.module.scss
@@ -7,7 +7,8 @@
 
   // height: 100%;
   // min-height: 3rem;
-  background-color: rgba(255, 255, 255, 0.338);
+  background-color: rgba(255, 255, 255, 0);
+
   padding: 0rem 0;
   margin-left: 0.5rem;
 
@@ -22,19 +23,24 @@
 
 .dragging {
   height: 100%;
+  background-color: rgba(255, 255, 255, 0.338);
 }
 
 .sort {
   display: flex;
 
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
+  margin-bottom: 0.5rem;
 
-  &:first-child {
-    border-top: 1px solid black;
-    // border-top: none;
-  }
+  box-shadow: rgba(0, 0, 0, 0.25) 4px 2px 2px, rgb(51, 51, 51) 0px 0px 0px 0px;
+
+  // border-left: 1px solid black;
+  // border-right: 1px solid black;
+  // border-bottom: 1px solid black;
+
+  // &:first-child {
+  //   border-top: 1px solid black;
+  //   // border-top: none;
+  // }
 }
 
 .item {
@@ -46,8 +52,8 @@
 
   background: linear-gradient(
     to bottom,
-    rgba(255, 255, 255, 0.9607843137) 25%,
-    rgba(255, 255, 255, 0.5568627451)
+    rgba(255, 255, 255, 0.9707843137) 25%,
+    rgba(255, 255, 255, 0.6768627451)
   );
   // height: 40px;
 
@@ -65,6 +71,7 @@
 
 .btnDrag {
   background: none;
+  cursor: all-scroll;
   // cursor: grab;
 
   // margin: 0.25rem 0 0.25rem 0.125rem;
@@ -76,24 +83,17 @@
   transition: opacity 0.2s;
 
   // height: 100%;
-  border-left: 2px dotted #335330;
-  border-right: 2px dotted #335330;
+  border-left: 2px dotted rgb(50, 22, 6);
+  border-right: 2px dotted rgb(50, 22, 6);
 
   &:hover {
     opacity: 1;
-  }
-
-  & > svg {
-    display: block;
-    width: 100%;
-    // fill: rgba(0, 0, 0, 0.642);
-    fill: rgb(50, 22, 6);
   }
 }
 
 .box {
   flex: auto;
-  margin-left: 0.5rem;
+  margin-left: 0.66rem;
   // width: calc(100% - 1.5rem);
 }
 
@@ -106,9 +106,8 @@
 
   & > h4 {
     font-size: 0.95rem;
-    line-height: 1;
+    // line-height: 1;
   }
-  width: auto;
 }
 
 .close {
