--- a/src/pages/map/components/tileLayerList/TileLayerList.module.scss
+++ b/src/pages/map/components/tileLayerList/TileLayerList.module.scss
@@ -5,7 +5,8 @@
   bottom: 0;
   left: 100%;
   padding: 0.66rem;
-  margin: 0 1rem;
+  // margin: 0 1rem;
+  margin-left: 0.33rem;
 
   background-color: #335330d3;
   border-radius: 0.25rem;
