--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -67,6 +67,10 @@
   overflow: hidden;
   line-height: 0;
 
+  filter: drop-shadow(0px 4px 2px rgba(0, 0, 0, 0.3));
+
+  // box-shadow: rgba(0, 0, 0, 0.275) 0px 5px 1px;
+  // border: 1px solid rgba(0, 0, 0, 0.275);
   & svg {
     position: relative;
     display: block;
@@ -77,4 +81,12 @@
   &.fill {
     fill: inherit;
   }
+}
+
+.curveShadow {
+  bottom: -8px;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
 }
