--- a/src/pages/map/components/sibebar/DraggableSidebarLayer.module.scss
+++ b/src/pages/map/components/sibebar/DraggableSidebarLayer.module.scss
@@ -6,7 +6,9 @@
   height: 55px;
   width: 100%;
   //   width: 250px;
-  border-bottom: 1px solid rgb(255, 255, 255);
+  // border-bottom: 1px dotted rgb(255, 255, 255);
+  box-shadow: rgba(255, 255, 255, 0.9707843137) 0px 2px 0px;
+
   cursor: pointer;
 }
 
@@ -25,7 +27,7 @@
     rgba(255, 255, 255, 0.9707843137) 25%,
     rgba(255, 255, 255, 0.6768627451)
   );
-  box-shadow: rgba(0, 0, 0, 0.25) 4px 2px 2px, rgb(51, 51, 51) 0px 0px 0px 0px;
+  box-shadow: rgba(0, 0, 0, 0.275) 4px 2px 2px, rgb(51, 51, 51) 0px 0px 0px 0px;
   border-bottom: none;
   color: black !important;
 }
