--- a/src/pages/project/ProjectInfo/ProjectInfo.module.scss
+++ b/src/pages/project/ProjectInfo/ProjectInfo.module.scss
@@ -29,7 +29,7 @@
 .h3 {
   text-align: center;
   text-transform: capitalize;
-  font-size: 1.75rem;
+  font-size: 2.25rem;
   margin-bottom: 2rem;
 }
 
@@ -48,7 +48,11 @@
 }
 
 .li {
-  margin-bottom: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+.li:last-child {
+  margin-bottom: 0rem;
 }
 
 .ornament__side {
@@ -56,14 +60,15 @@
   left: 2.5rem;
 
   & > svg {
-    transform: rotate(150deg);
+    // transform: rotate(120deg);
+    transform: translateX(-9.5rem);
   }
 
   &:last-child {
     left: -2.5rem;
 
     & > svg {
-      transform: rotate(30deg);
+      transform: translateX(9.5rem) rotate(180deg);
     }
   }
 
